Release 0.9.6
=============

* fixes in the smart search (not all rare cases were covered in 0.9.5)
* fix a bug if multi file is activated with very small chunks
* speeding up the estimation of the templates: less snippets, closer to centroids
* speeding up the estimation of the amplitudes: less noise snippets
* number of bins is adapted during the smart search as function of noise levels

=============
Release 0.9.5
=============

* speeding up the optimization of the amplitudes with MPI
* speeding up the processing of numpy datafiles (SpikeInterface)
* speeding up the smart search step (pre-generation of random numbers)
* speeding up the clustering step
* fix a bug while filtering in the preview mode introduced in 0.9.2
* speeding up the fitting step

=============
Release 0.9.2
=============

* speeding up the algorithm
* fixing a bug in the clustering while assigining labels
* better detection of noise snippets discarded during clustering
* cosmetic changes in the sanity plots (clusters)
* better handling of overlapping chunks while filtering, removing filtering artefacts
* templates are restricted within shanks
* optimization of the amplitudes once all templates have been found
* export of a purity value, for phy, to assess how good a cluster is (between 0 and 1)
* display the purity value in MATLAB
* fix a (silent) bug in the supports introduced in 0.9.0, preventing mixture removal
* nb_chances is automatically adapted during the fitting procedure
* drifts are now automatically handled by the meta merging procedure
* enhancement in the automatic merging of drifts

=============
Release 0.9.1
=============

* minor bug fixes in spyking-circus-launcher
* fix a bug in the amplitude display. Values were shuffled when several CPU were used
* add the option to ignore second component [clustering]->two_components

=============
Release 0.9.0
=============

* can now fit spikes below detection threshold (with ratio_thresh in [fitting], 0.9 as default)