@@ -865,7 +865,7 @@ def refine_amplitudes(params, nb_cpu, nb_gpu, use_gpu, normalization=True, debug
     all_elec = numpy.arange(comm.rank, N_e, comm.size)
 
     if comm.rank == 0:
-        to_explore = get_tqdm_progressbar(all_temp)
+        to_explore = get_tqdm_progressbar(params, all_temp)
     else:
         to_explore = all_temp
 
@@ -925,7 +925,7 @@ def refine_amplitudes(params, nb_cpu, nb_gpu, use_gpu, normalization=True, debug
         noise_amplitudes[i] = [numpy.zeros(0, dtype=numpy.float32)]
 
     if comm.rank == 0:
-        to_explore = get_tqdm_progressbar(all_elec)
+        to_explore = get_tqdm_progressbar(params, all_elec)
     else:
         to_explore = all_elec
 
@@ -1236,7 +1236,7 @@ def delete_mixtures(params, nb_cpu, nb_gpu, use_gpu):
 
     to_explore = range(comm.rank, nb_temp, comm.size)
     if comm.rank == 0:
-        to_explore = get_tqdm_progressbar(to_explore)
+        to_explore = get_tqdm_progressbar(params, to_explore)
 
     for count, k in enumerate(to_explore):
 
