@@ -105,7 +105,7 @@ def apply_patch_for_similarities(params, extension):
         to_explore = numpy.arange(N_half - 1)[comm.rank::comm.size]
 
         if comm.rank == 0:
-            to_explore = get_tqdm_progressbar(to_explore)
+            to_explore = get_tqdm_progressbar(params, to_explore)
 
         if not SHARED_MEMORY:
             over_x, over_y, over_data, over_shape = io.load_data(params, 'overlaps-raw', extension=extension)
@@ -232,9 +232,13 @@ def purge(file, pattern):
         print_and_log(['Removing %s for directory %s' % (pattern, dir)], 'debug', logger)
 
 
-def get_tqdm_progressbar(iterator):
+def get_tqdm_progressbar(params, iterator):
     sys.stderr.flush()
-    return tqdm.tqdm(iterator, bar_format='{desc}{percentage:3.0f}%|{bar}|[{elapsed}<{remaining}, {rate_fmt}]', ncols=66)
+    show_bars = params.get('data', 'status_bars')
+    if show_bars:
+        return tqdm.tqdm(iterator, bar_format='{desc}{percentage:3.0f}%|{bar}|[{elapsed}<{remaining}, {rate_fmt}]', ncols=66)
+    else:
+        return iterator
 
 
 def get_whitening_matrix(X, fudge=1e-15):
